# doc

./: .gitignore  .readthedocs.yml  =2.2.0  CODEOWNERS  README.md  environment.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/workflows/: rtd.yml
aiutils/: MANIFEST.in  README.md  pyproject.toml  setup.py  tasks.py
aiutils/tests/: conftest.py  test_cache.py
cloud-dockerfiles/chainlit/: Dockerfile
cloud-dockerfiles/dash/: Dockerfile
cloud-dockerfiles/flask/: Dockerfile
cloud-dockerfiles/panel/: Dockerfile
cloud-dockerfiles/shiny-r/: Dockerfile
cloud-dockerfiles/solara/: Dockerfile
cloud-dockerfiles/streamlit/: Dockerfile
cloud-dockerfiles/voila/: Dockerfile
doc/: _config.yml  _toc.yml  intro.md  notebooks.ipynb
doc/apps/: chainlit.md  chalk-it.md  dash.md  django.md  docker.md  fastapi.md  flask.md  funix.md  gradio.md  hyperdiv.md  jupyterlab-plugin.md  jupyterlab.md  marimo.md  mlflow.md  panel.md  quarto.md  shiny-express.md  shiny-python.md  shiny-r.md  shiny.md  solara.md  streamlit.md  vizro.md  vllm.md  voila.md
doc/dashboards/: customize.md  jupyterlab-plugin.md
doc/examples/: voila.md
doc/faq/: docker-error.md  faq.md
doc/features/: document-processing.md  scheduled-fns.md  serverless-fns.md
doc/nb-share/: notebook-sharing.md
doc/pricing/: compute.md  overview.md
doc/quickstart/: apikey.md  app.md  dashboard.md  database.md  signup.md  support.md
doc/user-guide/: ai-editor.md  analytics.md  application_cleanup.md  cli.md  custom-domains.md  dockerfile.md  env-vars.md  github.md  gpu.md  identifying-project.md  managing-apps.md  password.md  resources.md  secrets.md  wasm.md
examples/chat-with-csv/: nb.ipynb
examples/ml/: notebook.ipynb  requirements.txt
examples/plumber/: Dockerfile  README.md  main.R  plumber.R  rest_controller.R
examples/quarto/: Dockerfile
examples/quickstart/: notebook.ipynb  requirements.txt
examples/shiny-r/: Dockerfile  install.R
examples/streamlit/saml-auth/: app.py  config.toml  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt  start.sh  streamlit_app.py
misc/Voice-to-Text-to-Voice/: README.md  debug_audio_test.py  main.py  microphone_recorder.py  real_time_voice_processor.py  requirements.txt  setup_virtual_audio.py  test_tts_to_device.py  verify_setup.py  voice_pipeline.py
misc/ploomber-mcp/: LICENSE  README.md  generate_mcp_json.sh  pyproject.toml  requirements.txt  settings.py  setup_venv.sh  tasks.py
misc/ploomber-mcp/src/mcp_ploomber/: __init__.py  _settings.py  cli.py  log.py  server.py
misc/ploomber-mcp/src/mcp_ploomber/templates/: __init__.py  template.md
misc/ploomber-mcp/src/mcp_ploomber/utils/: markdown.py
misc/ploomber-mcp/tests/: conftest.py  test_sample.py
misc/ploomber-mcp/tests/assets/: test_asset.md
notebooks/: apicache.ipynb  document-qa-basic.ipynb  rag-from-scratch.ipynb  sentiment-classifier.ipynb
(+666 files in other folders)
