[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:Pdb"

[tool.nbqa.addopts]
flake8 = [
    # notebooks allow non-top imports
    "--extend-ignore=E402",
    # jupysql notebooks might have "undefined name" errors
    # due to the << operator
    # W503, W504 ignore line break after/before
    # binary operator since they are conflicting
    "--ignore=F821, W503, W504",
]

[tool.pkgmt]
# used to add links to issue numbers in CHANGELOG.md
github = "ploomber/mcp-ploomber"
# used to check that the package is importable when running pkgmt setup
package_name = "mcp_ploomber"
# defines the conda environment name when using pkgmt setup, if missing,
# package_name is used
env_name = "mcp-ploomber"

[tool.pkgmt.check_links]
extensions = ["md", "rst", "py", "ipynb"]


# build settings
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ploomber"
version = "0.1dev"
description = "A sample Python project"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["sample", "setuptools", "development"]
authors = [{ name = "A. Random Developer", email = "author@example.com" }]
maintainers = [
    { name = "A. Great Maintainer", email = "maintainer@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []
[project.optional-dependencies]
dev = ["pytest", "flake8", "invoke", "twine"]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]
mcp-ploomber = "mcp_ploomber.cli:cli"

[tool.setuptools]
package-data = { "mcp_ploomber" = ["assets/*", "templates/*", "*.md"] }
